--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
-  "proxy": "http://localhost:4000",
-  "name": "frontend",
+  "name": "sky-frontend",
   "version": "0.1.0",
-  
-  "private": false,
+  "private": true,
   "dependencies": {
-    "-": "^0.0.1",
-    "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "save-dev": "^0.0.1-security",
-    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,8 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
