admin pages hidden without log in

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EMAILJS_SERVICE_ID=service_9q9qq72
 EMAILJS_TEMPLATE_ID=template_4kpn7w7
 EMAILJS_USER_ID=hrdLjccQiPS2eGQhu
+JWT_SECRET_KEY=SkyEducationIsLocatedInDazhi
