--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -H 0.0.0.0",
+    "start-localhost": "next start",
     "lint": "next lint"
   },
   "dependencies": {
