--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
+  },
+  "engines": {
+    "node": "^16.0.0 || >=18.0.0"
   }
+  
 }
