--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-iframe": "^1.8.5",
     "tailwindcss": "3.3.3"
   },
   "engines": {
     "node": "^16.0.0 || >=18.0.0"
   }
-  
 }
